--- a/src/components/QuestionEditor/AnswerOptionsEditor/AnswerOptionsEditor.css
+++ b/src/components/QuestionEditor/AnswerOptionsEditor/AnswerOptionsEditor.css
@@ -109,6 +109,22 @@
   color: var(--custom-border-color-dark);
 }
 
+/* Remove the out effect on mui radio. 
+The first value is for development, the second is production. 
+This is the only way if found to have it still animated but disable the out animation */
+.editor .formControlLabel-radio .css-1hhw7if-MuiSvgIcon-root,
+.editor .formControlLabel-radio .css-1c4tzn {
+  /* Overwrite the out animation for the material UI radio button because on site change it doesn't unmount in time */
+  -webkit-transition: -webkit-transform 0ms cubic-bezier(0.4, 0, 1, 1) 0ms !important;
+  transition: transform 0ms cubic-bezier(0.4, 0, 1, 1) 0ms !important;
+}
+
+/* Disable hover effect on checkbox */
+.editor .formControlLabel-checkbox:hover,
+.editor .formControlLabel-radio:hover {
+  background-color: transparent;
+}
+
 @media screen and (hover: hover) and (pointer: fine) {
   .editor .editor-toolbar.enabled button:hover {
     background-color: rgba(0, 0, 0, .08)
